--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,3 +68,12 @@ div[role="dialog"]::-webkit-scrollbar-thumb {
   background: #c2c9d2;
   background-clip: padding-box;
 }
+.swiper {
+  padding-bottom: 25px !important;
+}
+:root {
+  --swiper-theme-color: hsla(19, 100%, 50%, 1) !important;
+  --swiper-pagination-bottom: -5px;
+  --swiper-pagination-bullet-inactive-color: rgb(255, 159, 115);
+  --swiper-pagination-bullet-size: 6px;
+}
