fix: add container query

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,3 +83,14 @@ div[role="dialog"]::-webkit-scrollbar-thumb {
   --swiper-pagination-bullet-inactive-color: rgb(255, 159, 115);
   --swiper-pagination-bullet-size: 8px;
 }
+.newsletter-wrap {
+  container: newsletterWrap / inline-size;
+}
+@container newsletterWrap (max-width: 240px) {
+  .form-wrap {
+    flex-wrap: wrap;
+  }
+  .form-wrap button {
+    width: 100%;
+  }
+}
