feat: add new "Get Card" CTA button to profile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,17 @@ body {
   width: 100%;
 }
 
+.border-conic-gradient {
+  background-image: conic-gradient(
+    from 180deg at 50% 50%,
+    #ff6a06 0deg,
+    #ff6492 120.00000357627869deg,
+    #ffe22c 223.12500715255737deg,
+    #fc620d 360deg,
+    #ff7e33 360deg
+  );
+}
+
 .sbui-btn > span {
   display: flex;
   align-items: center;
