fix: adjust style for newsletter form so that it adjusts for smaller screens (#1782)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,6 +95,19 @@ div[role="dialog"]::-webkit-scrollbar-thumb {
   --swiper-pagination-bullet-size: 8px;
 }
 
+.newsletter-wrap {
+  container: newsletterWrap / inline-size;
+}
+
+@container newsletterWrap (max-width: 240px) {
+  .form-wrap {
+    flex-wrap: wrap;
+  }
+  .form-wrap button {
+    width: 100%;
+  }
+}
+
 .loading {
   animation-duration: 1.25s;
   animation-fill-mode: forwards;
