--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,16 @@
 body {
   background-color: #f8f9fa;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply tracking-tight;
+}
+
 .auto-grow-input:not(:empty) {
   color: black;
 }
