fix: reset base font size in * selector in global.css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,11 @@
   src: url("../public/assets/fonts/Inter-VariableFont_slnt,wght.ttf");
 }
 
-body {
+* {
   @apply font-normal;
+}
+
+body {
   background-color: #f8f9fa;
 }
 
