--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,11 @@ h6 {
   @apply tracking-tight;
 }
 
+/* See https://github.com/open-sauced/app/issues/2210 */
+[role="checkbox"] > [data-state="checked"] > svg {
+  stroke-width: 5;
+}
+
 .auto-grow-input:not(:empty) {
   color: black;
 }
