--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,12 +13,28 @@ body {
   background-color: #f8f9fa;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
+  @apply text-4xl;
+  @apply font-extrabold;
+  @apply tracking-tight;
+  @apply lg:text-5xl;
+}
+
+h2 {
+  @apply text-3xl;
+  @apply font-semibold;
+  @apply tracking-tight;
+}
+
+h3 {
+  @apply text-2xl;
+  @apply font-semibold;
+  @apply tracking-tight;
+}
+
+h4 {
+  @apply text-xl;
+  @apply font-medium;
   @apply tracking-tight;
 }
 
