--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,9 @@ h6 {
 }
 
 input[type="checkbox"]:focus-visible,
-[role="checkbox"]:focus-visible {
+[role="checkbox"]:focus-visible,
+[role="radio"]:focus-visible,
+[role="combobox"]:focus-visible {
   @apply outline-none;
   @apply ring;
   @apply border-orange-500;
