feat: created the ButtonGroup and ButtonGroupItem components

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,8 @@ input[type="checkbox"]:focus-visible,
 [role="checkbox"]:focus-visible,
 [role="radio"]:focus-visible,
 [role="combobox"]:focus-visible,
-[role="switch"]:focus-visible {
+[role="switch"]:focus-visible,
+button:not([role]):focus-visible {
   @apply outline-none;
   @apply ring;
   @apply border-orange-500;
