chore: removed change I added for debugging CSS

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ input[type="checkbox"]:focus-visible,
 [role="radio"]:focus-visible,
 [role="combobox"]:focus-visible,
 [role="switch"]:focus-visible,
-button:not([role][class]):focus-visible {
+button:not([role]):focus-visible {
   @apply outline-none;
   @apply ring;
   @apply border-orange-500;
