--- a/styles/globals.css
+++ b/styles/globals.css
@@ -174,6 +174,11 @@ div[role="dialog"]::-webkit-scrollbar-thumb {
   z-index: unset !important;
 }
 
+/* For the mail icon */
+svg:has(> #Mail) {
+  stroke-width: 1;
+}
+
 /* For the tracked repo wizard button focus states */
 [data-tracked-repo-wizard] > button:focus-within > svg {
   @apply text-green-600;
