--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,9 +9,9 @@
 }
 
 body {
-  @apply font-normal;
-  background-color: #f8f9fa;
-  @apply text-light-slate-12;
+  @apply font-normal bg-[#f8f9fa] text-light-slate-12 dark:bg-[#160E0E] dark:text-slate-300;
+  /* background-color: #f8f9fa; */
+  /* @apply text-light-slate-12; */
 }
 
 h1,
